--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,43 @@
-body {
-    text-align: center;
-    font-family: sans-serif;    
-}
+/* ALL YOUR CODE GOES BELOW THIS LINE */
+/* ================================== */
 
-#container {
+.container {
+    width: 800px;
     margin: 0 auto;
-    width: 90%;
-    height: 1000px;
-    border: 4px solid black;
-
-    /* Grid css below */
-    /* display: inline-grid; */
+  
+    /* create 4 rows:  
+    - 150px 
+    - 50px 
+    - 400px
+    - 150px  */
+    /* ⬇️⬇️⬇️ STYLE THE GRID CONTAINER HERE ⬇️⬇️⬇️ */
     display: grid;
-    grid-template-columns: 250px 500px 250px;
-}
-
-.box {
-    font-size: 1.5rem;
-}
+    grid-template-rows: 150px 50px 400px 150px;
+    /* ⬆️⬆️⬆️ STYLE THE GRID CONTAINER HERE ⬆️⬆️⬆️ */
+  }
+  
+  /* 🚨🚫🙅  START OF THE NO TOUCHING ZONE 🙅🚫🚨 */
+  
+  .container > * {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2rem;
+    font-family: sans-serif;
+  }
+  .header {
+    background-color: #f06292;
+  }
+  .navbar {
+    background-color: #ba68c8;
+  }
+  
+  .main {
+    background-color: #9575cd;
+  }
+  
+  .footer {
+    background-color: #7986cb;
+  }
+  
+  /* 🚨🚫🙅  END OF THE NO TOUCHING ZONE 🙅🚫🚨 */
