--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,27 @@
-/* 🚨🚫🙅  START OF THE NO TOUCHING ZONE 🙅🚫🚨 */
+body {
+    text-align: center;
+    font-family: sans-serif;    
+}
+
+#container {
+    margin: 0 auto;
+    width: 1000px;
+    height: 1000px;
+    border: 4px solid black;
+
+    /* Grid css below */
+    /* display: inline-grid; */
+    display: grid;
+    grid-template-columns: 500px 500px;
+    grid-template-rows: 500px 500px;
+    overflow: hidden;
+}
+
+p {
+    font-size: 3rem;
+    overflow: hidden;
+}
 
 .box {
-    background-color: #42a5f5;
-    border: 3px solid black;
-    font-size: 3em;
-    padding: 0.5em;
-  }
-  /* 🚨🚫🙅  END OF THE NO TOUCHING ZONE 🙅🚫🚨 */
-  
-  /* ALL YOUR CODE GOES BELOW THIS LINE */
-  /* ================================== */
-  
-  #container {
-    margin: 0 auto;
-    height: 600px;
-    width: 600px;
-    border: 1px solid black;
-  
-    /* Create 2 columns: 
-      - 200px 
-      - 400px 
-    Create 3 rows: 
-      - 100px
-      - 400px 
-      - 100px */
-  
-    /* ⬇️⬇️⬇️ STYLE THE GRID CONTAINER HERE ⬇️⬇️⬇️ */
-    display: grid;
-    grid-template-columns: 200px 400px;
-    grid-template-rows: 100px 400px 100px;
-    /* ⬆️⬆️⬆️ STYLE THE GRID CONTAINER HERE ⬆️⬆️⬆️ */
-  }
+    font-size: 1.5rem;
+}
